cabal-version:       3.0
name:                brokkr-nbt
version:             0.0.0.0
synopsis:            NBT parser
description:         NBT parser
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2023 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
  build-depends:       base >= 4.17 && < 5
                     , primitive
                     , bytestring
                     , flatparse
                     , vector
                     , mason
                     , text
                     , deepseq
                     , template-haskell
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2

  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  --if (arch(x86_64) || arch(i386))
  c-sources:           cbits/x86/VecByteswap.c
                       cbits/x86/ModifiedUtf8.c
--else
  --c-sources:         cbits/basic.c
  cc-options:          -O3
  exposed-modules:     Brokkr.NBT
                       Brokkr.NBT.ByteOrder
                       Brokkr.NBT.Codec
                       Brokkr.NBT.Codec.Internal
                       Brokkr.NBT.Internal
                       Brokkr.NBT.NBTString
                       Brokkr.NBT.NBTString.Internal
                       Brokkr.NBT.Slice
                       Brokkr.NBT.NBTError
                       Brokkr.NBT.Class
  other-modules:       Brokkr.NBT.Codec.DecodeBinary
                       Brokkr.NBT.Codec.EncodeBinary
                       Brokkr.NBT.Codec.Show
test-suite brokkr-nbt-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       brokkr-nbt
                     , deepseq
                     , zlib
                     , tasty
                     , tasty-hunit
                     , tasty-hedgehog
                     , hedgehog
  other-modules:       CodecSpec
                       BigTest
benchmark brokkr-nbt-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       tasty-bench
                     , brokkr-nbt
                     , deepseq
                     , zlib
                     , hedgehog
                     -- , named-binary-tag
                     -- , cereal
  other-modules:       BigTest
