cabal-version:       2.4
name:                brokkr-packed-vector
version:             0.0.0.0
synopsis:            Variable sized packed vectors
description:         Variable sized packed vectors
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
  build-depends:       base >= 4 && < 5
                     , primitive
                     , deepseq
                     , template-haskell
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
                       -- Bench with and without when 9.4.1 is out
                       --fworker-wrapper-cbv
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.PackedVector
                     , Brokkr.PackedVector.Internal
                     , Brokkr.PackedVector.Mutable
                     , Brokkr.PackedVector.Mutable.Internal
                     , Brokkr.PackedVector.Pack
  other-modules:       Brokkr.PackedVector.Util
test-suite packed-vector-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Generators
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr-packed-vector
                     , sydtest >= 0.12 && < 0.14
                     , validity >= 0.12 && < 0.13
                     , genvalidity >= 1.0 && < 1.2
                     , genvalidity-sydtest >= 1.0 && < 1.1
                     , QuickCheck >= 2.13 && < 2.15
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
benchmark packed-vector-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       tasty-bench
                     , brokkr-packed-vector
                     , random
                     , vector
  ghc-options:         -O2
