cabal-version:       2.4
name:                brokkr-packet
version:             0.0.0.0
synopsis:            Minecraft packet data
description:         Minecraft packet data
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
  build-depends:       base >= 4.17 && < 5
                     , brokkr-varint
                     , brokkr-nbt
                     , brokkr-registry
                     , brokkr-packed-vector
                     , brokkr-libdeflate
                     , text
                     , bytestring
                     , template-haskell
                     , flatparse
                     , mason
                     , uuid
                     , vector
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.Packet.ServerToClient.Login
                       Brokkr.Packet.ServerToClient.Login.Types
                       Brokkr.Packet.ServerToClient.Login.Types.Internal
                       Brokkr.Packet.ServerToClient.Play
                       Brokkr.Packet.ServerToClient.Play.Types
                       Brokkr.Packet.ServerToClient.Play.Types.Codec
                       Brokkr.Packet.ServerToClient.Play.Types.Internal
                       Brokkr.Packet.ServerToClient.Status
                       Brokkr.Packet.ClientToServer.Handshake
                       Brokkr.Packet.ClientToServer.Handshake.Types
                       Brokkr.Packet.ClientToServer.Handshake.Types.Internal
                       Brokkr.Packet.ClientToServer.Login
                       Brokkr.Packet.ClientToServer.Login.Types
                       Brokkr.Packet.ClientToServer.Play
                       Brokkr.Packet.ClientToServer.Play.Types
                       Brokkr.Packet.ClientToServer.Play.Types.Internal
                       Brokkr.Packet.ClientToServer.Status
                       Brokkr.Packet.Binary
                       Brokkr.Packet.Common
                       Brokkr.Packet.Common.Internal
                       Brokkr.Packet.MCString
                       Brokkr.Packet.SizePrefixed
                       Brokkr.Packet.Encode
                       Brokkr.Packet.Decode
                       Brokkr.Packet.Settings
  other-modules:       Brokkr.Packet.TH
