cabal-version:       2.4
name:                brokkr-varint
version:             0.0.0.0
synopsis:            Fast VarInt encoding and decoding
description:         Fast VarInt encoding and decoding
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
  build-depends:       base >= 4.17 && < 5
                     , bytestring
                     , flatparse
                     , mason
                     , primitive
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.VarInt
                       Brokkr.VarLong
                       Brokkr.VarInt.Decode
                       Brokkr.VarInt.Encode

test-suite brokkr-varint-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VarIntSpec
                       VarLongSpec
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr-varint
                     , sydtest
                     , sydtest-hedgehog
                     , hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark brokkr-varint-bench
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             VarInt.hs
  build-depends:       tasty-bench
                     , random
                     , mwc-random
                     , deepseq
                     , vector
  ghc-options:         -O2
