cabal-version:       2.4
name:                brokkr-zlib-ng
version:             0.0.0.0
synopsis:            Bindings to zlib-ng
description:         Bindings to zlib-ng
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
  build-depends:       base >= 4.17 && < 5
                     , bytestring
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.Zlib
  includes:            zlib-ng.h
  pkgconfig-depends:   zlib-ng

