cabal-version:       2.4
name:                brokkr
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
-- TODO Go through deps soon-ish
  build-depends:       base >= 4.17 && < 5
                     , brokkr-block
                     , brokkr-registry
                     , brokkr-nbt
                     , async
                     , stm
                     , stm-containers
                     , monad-control
                     , primitive
                     , text ^>= 2.0
                     , flatparse
                     , bytestring
                     , mason
                     , network
                     , network-simple
                     , template-haskell
                     , uuid
                     , vector
                     , containers
                     , zlib
                     , containers
                     , unordered-containers
                     , hashable
                     , deepseq
                     , mtl
                     , transformers
                     , transformers-base
                     , monad-control
                     , chronos
                     , optics
                     , bitfield
                     , hecs
                     , hecs-core
                     , safe-exceptions
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
                       DataKinds
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
--if (arch(x86_64) || arch(i386))
  c-sources:          cbits/x86/countElems.c
--else
  --c-sources:         cbits/basic.c
  cc-options:          -O3
  exposed-modules:      Block.BlockFace
                      , Block.Position
                      -- , Chunk
                      , Chunk.Heightmap
                      , Chunk.Internal
                      , Chunk.Position
                      , Chunk.Section
                      , Client
                      , Client.GameMode
                      , Dimension
                      , Dimension.Internal
                      -- Entity
                      , Entity.Util.Hand
                      -- , IO.ChunkCache
                      , IO.Chunk
                      , IO.ChunkParser
                      , IO.Chunkloading
                      , IO.RegionFile
                      -- , Network
                      , Server
                      , Server.Config
                      , Server.Monad
                      , System.JoinPlayers
                      , System.NetworkCommands
                      , System.PlayerMovement
                      -- 
                      , Network.Connection
                      , Network.Exception
                      , Network.Handler
                      , Network.Monad
                      , Network.Packet.Client.Login
                      , Network.Packet.Client.Play
                      , Network.Packet.Client.Play.ChunkData
                      , Network.Packet.Client.Play.Login
                      , Network.Packet.Server.Handshake
                      , Network.Packet.Server.Login
                      , Network.Packet.Server.Play
                      , Network.Packet.Server.Play.ClientInformation
                      , Network.Packet.Server.Play.PlayerAbilities
                      , Network.Packet.Server.Play.PlayerAction
                      , Network.Packet.Server.Play.PlayerCommand
                      , Network.Packet.Server.Play.UseItemOn
                      , Network.Protocol
                      , Network.Util
                      , Network.Util.Builder
                      , Network.Util.EntityId
                      , Network.Util.FromIntegral
                      , Network.Util.MCString
                      , Network.Util.Packet
                      , Network.Util.SizePrefixed
                      , Network.Util.Slot
                      , Network.Util.VarNum
                      , Util.Angle
                      , Util.Binary
                      , Util.BitSet
                      , Util.ByteOrder
                      , Util.Dismount
                      , Util.Hecs
                      , Util.NBT
                      , Util.NBT.Internal
                      , Util.PalettedVector
                      , Util.Vector.Packed
                      , Util.Vector.Internal
                      , Util.Linear.V2
                      , Util.Linear.V3
                      , Util.Linear.Vector
                      , Util.Position
                      , Util.PrimVar
                      , Util.Queue
                      , Util.Ring
                      , Util.Rotation
                      , Util.TeleportId
                      , Util.UUID
                      , Util.Velocity
                      , Util.Word24
executable Brokkr
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       brokkr
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
test-suite Brokkr-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       LoginSpec
                       JoinGameSpec
                       MovementSpec
                       Spec
                       Utils.Setup
                       Utils.Client
                       Utils.Fault
                       Utils.Handshake
                       Utils.Login
                       Utils.Play
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr
                     , sydtest
                     , sydtest-hedgehog
                     , hedgehog
                     , resourcet
                     , mmorph
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
benchmark Chunkloading
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Chunkloading.hs
  build-depends:       tasty-bench
                     , brokkr
  ghc-options:         -O2
benchmark NBT
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Util/NBT.hs
  build-depends:       tasty-bench
                     , brokkr
  ghc-options:         -O2
benchmark VarInt
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             VarInt.hs
  build-depends:       tasty-bench
                     , brokkr
                     , random
                     , mwc-random
  ghc-options:         -O2
benchmark GlobalBlockId
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             GlobalBlockId.hs
  build-depends:       tasty-bench
                     , random
