cabal-version:       2.4
name:                brokkr
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
-- TODO Go through deps soon-ish
  build-depends:       base >= 4.17 && < 5
                     , brokkr-block
                     , brokkr-anvil
                     , brokkr-registry
                     , brokkr-nbt
                     , brokkr-packet
                     , brokkr-packed-vector
                     , brokkr-libdeflate
                     , async
                     , stm
                     , stm-containers
                     , monad-control
                     , primitive
                     , text ^>= 2.0
                     , flatparse
                     , bytestring
                     , mason
                     , network
                     , network-simple
                     , template-haskell
                     , uuid
                     , vector
                     , containers
                     , zlib
                     , containers
                     , unordered-containers
                     , hashable
                     , deepseq
                     , mtl
                     , transformers
                     , transformers-base
                     , monad-control
                     , chronos
                     , optics
                     , bitfield
                     , hecs
                     , hecs-core
                     , safe-exceptions
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
                       DataKinds
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
--if (arch(x86_64) || arch(i386))
  c-sources:          cbits/x86/countElems.c
--else
  --c-sources:         cbits/basic.c
  cc-options:          -O3
  exposed-modules:      Brokkr.Chunk
                      , Brokkr.Chunk.BlockStates
                      , Brokkr.Chunk.HeightMap
                      , Brokkr.Chunk.Internal
                      , Brokkr.Chunk.Position
                      , Brokkr.Client
                      , Brokkr.Client.GameMode
                      , Brokkr.Client.Username
                      , Brokkr.Debug.Monad
                      , Brokkr.Dimension
                      , Brokkr.Dimension.Internal
                      -- Entity
                      , Brokkr.Entity.Util.Hand
                      -- Inventory
                      , Brokkr.Inventory.Internal
                      -- , IO.ChunkCache
                      , Brokkr.IO.ChunkCache
                      , Brokkr.IO.Chunkloading
                      -- Server and ecs setup
                      , Brokkr.Server
                      , Brokkr.Server.Config
                      , Brokkr.Server.Monad
                      -- , Systems and listeners
                      , Brokkr.System.JoinPlayers
                      , Brokkr.System.NetworkCommands
                      , Brokkr.System.PlayerMovement
                      -- , Network
                      , Brokkr.Network.Command
                      , Brokkr.Network.Connection
                      , Brokkr.Network.Exception
                      , Brokkr.Network.Handler
                      , Brokkr.Network.Monad
                      , Brokkr.Network.Util.Chunk
                      , Brokkr.Util.BitSet
                      , Brokkr.Util.PalettedVector
                      , Brokkr.Util.Linear.V2
                      , Brokkr.Util.Linear.V3
                      , Brokkr.Util.Linear.Vector
                      , Brokkr.Util.Position
                      , Brokkr.Util.PrimVar
                      , Brokkr.Util.Queue
                      , Brokkr.Util.Ring
                      , Brokkr.Util.Rotation
                      , Brokkr.Util.Velocity
executable Brokkr
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       brokkr
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr
                     , sydtest
                     , sydtest-hedgehog
                     , hedgehog
                     , resourcet
                     , mmorph
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
benchmark GlobalBlockId
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             GlobalBlockId.hs
  build-depends:       tasty-bench
                     , random
