cabal-version:       3.0
name:                hecs-core
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Game
build-type:          Simple
extra-doc-files:     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
-- TODO Go through deps soon-ish
  build-depends:       base >= 4.17 && < 5
                     , brokkr-hashtables
                     , hashable
                     , primitive
                     , deepseq
                     , template-haskell
                     , containers
                     , transformers-base
                     , monad-control
                     , bitfield
                     , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
                       --O0
                       -debug
                       -g2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
                       DataKinds
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hecs.Archetype
                       Hecs.Archetype.Internal
                       Hecs.Archetype.Storage
                       Hecs.Archetype.Type
                       Hecs.Array
                       Hecs.Component
                       Hecs.Component.Column
                       Hecs.Component.Generic
                       Hecs.Component.Internal
                       Hecs.Component.Preset
                       Hecs.Component.Relation
                       Hecs.Entity
                       Hecs.Entity.Internal
                       Hecs.Filter
                       Hecs.Filter.Column
                       Hecs.Filter.DSL
                       Hecs.Filter.Internal
                       Hecs.Fold
                       Hecs.Query
                       Hecs.Query.Internal
                       Hecs.System
                       Hecs.System.Internal
                       Hecs.World
                       Hecs.World.Class
                       Hecs.World.Has
                       Hecs.World.Internal
                       Hecs.World.TH
-- Hecs.Array
--                       , Hecs.Archetype
--                       , Hecs.Archetype.ComponentType
--                       , Hecs.Archetype.Internal
--                       , Hecs.Archetype.Storage
--                       , Hecs.Entity.Internal
--                       , Hecs.Fold
--                       , Hecs.World
--                       , Hecs.World.Has
--                       , Hecs.World.Internal
--                       , Hecs.World.TH
--                       , Hecs.Component
--                       , Hecs.Component.Generic
--                       , Hecs.Component.Internal
--                       , Hecs.Component.Relation
--                       , Hecs.Component.Properties
--                       , Hecs.Filter
--                       , Hecs.Filter.Internal
