cabal-version:       3.0
name:                hecs
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
-- TODO Go through deps soon-ish
  build-depends:       base ^>= 4.17.0.0
                     , hecs-core
                     , mtl
                     , transformers
                     , transformers-base
                     , monad-control
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
                       DataKinds
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:      Hecs
                      , Hecs.Monad
                      , Hecs.Monad.Class

executable Example
  import:              common-options
  hs-source-dirs:      example
  main-is:             Example.hs
  build-depends:       hecs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2

